ev_site_macros/tests/compile_fail/missing_root_tier.rs
use ev_site_macros::tiered;

fn main() {
	tiered! {
		Block { } //~ ERROR: root element of `tiered!` must declare `tier: PN`
	};
}
